--- a/awesome-latex-cv/section_headline.tex
+++ b/awesome-latex-cv/section_headline.tex
@@ -11,9 +11,9 @@
 I am currently a 5th-year PhD Student at Indian Institute of Technology, Bombay, India,
  working with Prof Prabhu Ramachandran on meshfree methods to model solid particle erosion.
 
-{\textbf{Research interests.}}
-My Ph.D research work covers a range of issues: \textbf{variational Bayesian inference,
-stochastic/distributed optimization, probabilistic graphical models, transfer learning, multitask learning
-and sensor networks}. Currently, I am interesting in varies approaches to deep learning (CNN, GAN, Deep Bayesian Learning, etc.)
-and their applications to computer vision (image processing, video analysis, etc.).
-}
+ {\textbf{Research interests.}} My Ph.D research work covers a range of issues:
+ \textbf{Meshless methods: Smoothed particle hydrodynamics, Discrete element
+   method, High performance computing, Rigid-fluid coupling, Fluid-structure
+   interaction, Solid-particle erosion of ductile body}. Currently, I am interesting in varies
+ approaches to deep learning (CNN, GAN, Deep Bayesian Learning, etc.) and their
+ applications to computer vision (image processing, video analysis, etc.). }
