--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -13,7 +13,7 @@
 \name{Dinesh}{Adepu}
 
 \tagline{PhD scholar}
-\photo{2.5cm}{avatar}
+\photo{2.5cm}{avatar1}
 \socialinfo{
     % \homepage{huajh7.com}
     \github{dineshadepu}
@@ -29,15 +29,15 @@
 
     \makecvheader
 
-    % \input{section_headline}
-    % \input{section_education}				% Section education
-    % \input{section_publications}			% Section Publications
-    % \input{section_skills}					% Section Skill
+    \input{section_headline}
+    \input{section_education}				% Section education
+    \input{section_publications}			% Section Publications
+    \input{section_skills}					% Section Skill
     % \input{section_experiences}				% Section experiences
     \input{section_experience_short}		% Section experiences
-    % \input{section_languages}               % Section languages
+    \input{section_languages}               % Section languages
     % \input{section_awards}					% Section Awards
-    % \input{section_interests}				% Section Interests
+    \input{section_interests}				% Section Interests
     % \input{section_references}                 % Section References
 
     \noindent \\
