--- a/awesome-latex-cv/section_experience_short.tex
+++ b/awesome-latex-cv/section_experience_short.tex
@@ -27,44 +27,40 @@
                     {PySPH, SPH, Freesurfaceproblems, Python}
   \emptySeparator
   \experience
-  {} {Elastic bodies collision with SPH-DEM coupling}{}{}
-  {} {
-                      \begin{itemize}
-                      \item  A contact force model incorporated into an updated-Lagrangian SPH is developed.
-                      \item  Unphysical interaction of the elastic solids within the classical SPH is eliminated.
-                      \item  The method can easily handle friction between two solids.
-                      \item  A careful investigation of primary and secondary bodies is conducted.
-                      \item  Several numerical examples are utilized to confirm the proposed model.
-                      \item  The source code is made available under an open source license.
-                        % \faGithub: \link{https://github.com/pypr/collision_sph} {github.com/pypr/collision_sph}
-                      \end{itemize}
-                    }
-                    {SPH, DEM, Elastic solids collision, Arbitrarily shaped solids}
-  \emptySeparator
-  \experience
   {} {Rigid fluid coupling}{}{}
   {}    {
                     \begin{itemize}
-                        \item Apply the GMM, student-t mixture model, and Dirichlet process based infinite mixture modelto the brain MR image clustering problem;
-                        \item Derive the detail variational Bayesian inference process.
-                        \item Improve these three algorithms by using laplacian graph (manifold learning);
-                        \item \faGithub: \link{https://github.com/huajh/variational_bayesian_clusterings} {github.com/huajh/variational\_bayesian\_clusterings}
+                    \item Developed a SPH-DEM solver in PySPH software.
+                    \item The DEM solver can handle interaction between the arbitrarily shaped bodies.
+                    \item Studied transport of bodies under a dam-breaking event.
                     \end{itemize}
                   }
-                  {Mixture Model, Clustering, Dirichlet Process, Variational Bayes, Manifold Learnig}
+                  {Arbitrarily shaped rigid bodies, Rigid-fluid coupling, Discrete element method, SPH, CTVF}
 
   \emptySeparator
   \experience
   {} {Fluid structure interaction}{}{}
   {}    {
     \begin{itemize}
-        \item  Responsible for the maintenance and development of Princeton Financial Systems.
-        \item As well as in charge of improving the performance of the system by integrating new technologies.
+        \item Implemented a total Lagrangian framework for fluid structure interaction in SPH.
+        \item FSI problems involving free surfaces are solved.
+        \item Fully reproducible using Automan package.
     \end{itemize}
   }
-  {C/C++ programming, C performance optimization, portfolio}
-
-
+  {Fluid-structure interaction (FSI), SPH, CTVF}
+  \emptySeparator
+  \experience
+  {} {Elastic bodies collision with SPH-DEM coupling}{}{}
+  {} {
+                      \begin{itemize}
+                      \item  A contact force model incorporated into an updated-Lagrangian SPH is developed.
+                      \item  Unphysical interaction of the elastic solids within the classical SPH is eliminated.
+                      \item  The method can easily handle friction between two solids.
+                      \item  The source code is made available under an open source license.
+                        \faGithub: \link{https://gitlab.com/pypr/csph} {https://gitlab.com/pypr/csph}
+                      \end{itemize}
+                    }
+                    {SPH, DEM, Elastic solids collision, Arbitrarily shaped solids}
   \emptySeparator
   \experience
   {} {A parallel N-body software}{}{}
@@ -76,14 +72,7 @@
         \faGithub: \link{https://github.com/dineshadepu/prestige}{https://github.com/dineshadepu/prestige},
     \end{itemize}
   }
-  {N-body, Rust, High performance computing, ECS, Discrete element method}
+  {N-body, Rust, High performance computing, Entity-component-system (ECS), Discrete element method}
 
 
 \end{experiences}
-    % {} {Elastic bodies collision with SPH-DEM coupling}{}{}
-    % {}    {
-    %                   \begin{itemize}
-    %                   \item
-    %                   \end{itemize}
-    %                 }
-    %                 {SPH, DEM, Elastic solids collision, Arbitrarily shaped solids}
