--- a/awesome-latex-cv/section_education.tex
+++ b/awesome-latex-cv/section_education.tex
@@ -20,10 +20,14 @@
 %\end{scholarship}
 
 \begin{tabular}{rl}
-    \textsc{July 2015 --}            & \textbf{M.Tech + PhD Candidate} in Aerospace engineering\\
-    \textsc{Jan 2023 (expected)}    &  \emph{Indian Institute of Technology, Bombay} (IITB), Bombay \\
+    \textsc{July 2015 --}            & \textbf{M.Tech + PhD Candidate} in Aerospace engineering,\\
+    \textsc{Jan 2023 (expected)}    &  \emph{Indian Institute of Technology, Bombay} (IITB), India \\
                                     &  \emph{Advisor: \link{https://www.aero.iitb.ac.in/~prabhu}{Prof. Prabhu Ramachandran}}\\
                                     % &  \textsc{GPA}: 4.1/5.0\\
+
+    \textsc{July 2011 --}            & \textbf{B.Tech} in Aeronautical engineering,\\
+  \textsc{July 2015}    &  \emph{Institute of Aeronautical Engineering, Hyderabad}, India
+                                    % &  \emph{Advisor: \link{https://www.aero.iitb.ac.in/~prabhu}{Prof. Prabhu Ramachandran}}\\
     % \textsc{Sep 2009 --Jun 2013}  &  \textbf{Bachelor of Engineering},  \emph{Institute} (ZJUT), Hangzhou\\
     %                               &  Double Majors in Computer Science \& Automation \\
     %                               & \emph{Advisor:\link{http://sychen.com/}{Prof. Shenyong Chen}}\\
