--- a/awesome-latex-cv/section_publications.tex
+++ b/awesome-latex-cv/section_publications.tex
@@ -11,20 +11,20 @@
 \sectionTitle{Publications}{\faLeanpub}
 
 \begin{itemize}
-\item \textbf{Dinesh Adepu} and Prabhu Ramachandran. \textbf{A corrected transport-velocity
-formulation for fluid and structural mechanics with SPH}. \emph{in: arXiv preprint
+\item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``A corrected transport-velocity
+formulation for fluid and structural mechanics with SPH''. \emph{in: arXiv preprint
 arXiv:2106.00756 (2021)}, doi: \link{https://doi.org/10.48550/arXiv.2106.00756}{link}.
 
-\item \textbf{Dinesh Adepu} and Prabhu Ramachandran. \textbf{Improved collision
-  handling of elastic solids in SPH using a contact force model}. \emph{in:
+\item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``Improved collision
+  handling of elastic solids in SPH using a contact force model''. \emph{in:
     Engineering Archive preprint (Aug. 2022),}, doi: \link{https://doi.org/10.31224/2503}{link}.
 
-\item \textbf{Dinesh Adepu} and Prabhu Ramachandran. \textbf{Fluid-Structure
-  Interaction with an Updated Lagrangian Smoothed Particle Hydrodynamics}.
+\item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``Fluid-Structure
+  Interaction with an Updated Lagrangian Smoothed Particle Hydrodynamics''.
   \emph{in: Engineering Archive preprint (Oct. 2022),}, doi: \link{https://doi.org/10.31224/2602}{link}.
 
-\item Prabhu Ramachandran, \textbf{Dinesh Adepu} et. al, \textbf{PySPH: a Python-based
-  framework for smoothed particle hydrodynamics}. \emph{In: arXiv preprint
+\item Prabhu Ramachandran, \textbf{Dinesh Adepu} et. al, ``PySPH: a Python-based
+  framework for smoothed particle hydrodynamics''. \emph{In: arXiv preprint
     arXiv:1909.04504 (2020)}.
 
 \end{itemize}
