Add cmake skill

--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -35,6 +35,7 @@
     \input{section_skills}					% Section Skill
     % \input{section_experiences}				% Section experiences
     \input{section_experience_short}		% Section experiences
+    \input{section_course_work}					% Section coursework
     \input{section_languages}               % Section languages
     % \input{section_awards}					% Section Awards
     \input{section_interests}				% Section Interests
