--- a/awesome-latex-cv/section_experience_short.tex
+++ b/awesome-latex-cv/section_experience_short.tex
@@ -66,7 +66,7 @@
   {} {A parallel N-body software}{}{}
   {}    {
     \begin{itemize}
-      \item An parallel n-body software in memory safe Rust language.
+      \item A parallel n-body software in memory safe Rust language.
       \item Implemented linked-list based nearest neighbour search algorithm.
       \item Applied to granular soil modeling.
         \faGithub: \link{https://github.com/dineshadepu/prestige}{https://github.com/dineshadepu/prestige},
