--- a/awesome-latex-cv/section_publications.tex
+++ b/awesome-latex-cv/section_publications.tex
@@ -8,7 +8,7 @@
 
 
 %Section: Publications
-\sectionTitle{Publications}{\faLeanpub}
+\sectionTitle{Journal Publications}{\faLeanpub}
 
 \begin{itemize}
 \item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``A corrected transport-velocity
@@ -19,12 +19,21 @@ arXiv:2106.00756 (2021)}, doi: \link{https://doi.org/10.48550/arXiv.2106.00756}{
   handling of elastic solids in SPH using a contact force model''. \emph{in:
     Engineering Archive preprint (Aug. 2022),}, doi: \link{https://doi.org/10.31224/2503}{link}.
 
+\item Prabhu Ramachandran, Aditya Bhosale, Kunal Puri, Pawan Negi, Abhinav Muta,
+  \textbf{Adepu Dinesh}, Dileep Menon, Rahul Govind, Suraj Sanka, Amal S.
+  Sebastian, Ananyo Sen, Rohan Kaushik, Anshuman Kumar, Vikas Kurapati,
+  Mrinalgouda Patil, Deep Tavker, Pankaj Pandey, Chandrashekhar Kaushik, Arkopal
+  Dutt, and Arpit Agarwal. 2021. ``PySPH: A Python-based Framework for Smoothed
+  Particle Hydrodynamics''. \emph{ACM Trans. Math. Softw. 47, 4, Article 34 (December
+  2021), 38 pages} doi: \link{https://doi.org/10.1145/3460773}{link}.
+\end{itemize}
+
+
+%Section: Publications
+\sectionTitle{Conference Proceedings}{\faLeanpub}
+
+\begin{itemize}
 \item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``Fluid-Structure
   Interaction with an Updated Lagrangian Smoothed Particle Hydrodynamics''.
-  \emph{in: Engineering Archive preprint (Oct. 2022),}, doi: \link{https://doi.org/10.31224/2602}{link}.
-
-\item Prabhu Ramachandran, \textbf{Dinesh Adepu} et. al, ``PySPH: a Python-based
-  framework for smoothed particle hydrodynamics''. \emph{In: arXiv preprint
-    arXiv:1909.04504 (2020)}.
-
+  \emph{in: 9th International and 49th National Conference of Fluid Mechanics and Fluid Power (FMFP-2022) (Dec. 2022),}, doi: \link{https://doi.org/10.31224/2602}{link}.
 \end{itemize}
