--- a/awesome-latex-cv/section_skills.tex
+++ b/awesome-latex-cv/section_skills.tex
@@ -20,5 +20,7 @@
 
       \textsc{Programming Skills:}    &  Python, Rust, C/C++, Lisp, \LaTeX, Git.\\
 
+      \textsc{Programming Skills C++:}  &  CMake\\
+
       \textsc{Text editor:}    &  Emacs, Vim
     \end{tabular}
