--- a/cover_letter/nus_cover_letter.tex
+++ b/cover_letter/nus_cover_letter.tex
@@ -51,8 +51,9 @@ Dear Sir,
 %references such as what and how you got this information
 \vspace{1em} I am Dinesh Adepu, currently in my M.Tech+Ph.D. program in the
 Aerospace Engineering department at IIT Bombay. I want to discuss my experience
-for the position advertised for the research fellow in computation. I found the current job opening
-through the job portal site on the NUS university's official website.\\
+for the position advertised for the research fellow in computation. I found the
+current job opening through the job portal site on the NUS university's official
+website.\\
 
 %narrate why you want to apply
 \vspace{1em} As part of my Ph.D., I have developed a numerical technique in
