Add changes to resume. Added cover letter.

--- a/awesome-latex-cv/section_education.tex
+++ b/awesome-latex-cv/section_education.tex
@@ -20,8 +20,8 @@
 %\end{scholarship}
 
 \begin{tabular}{rl}
-    \textsc{July 2015 --}            & \textbf{M.Tech + PhD Candidate} in Aerospace engineering,\\
-    \textsc{Jan 2023 (expected)}    &  \emph{Indian Institute of Technology, Bombay} (IITB), India \\
+    \textsc{July 2015 --}            & \textbf{M.Tech + PhD} in Aerospace engineering,\\
+    \textsc{June 2023}      &  \emph{Indian Institute of Technology, Bombay} (IITB), India \\
                                     &  \emph{Advisor: \link{https://www.aero.iitb.ac.in/~prabhu}{Prof. Prabhu Ramachandran}}\\
                                     % &  \textsc{GPA}: 4.1/5.0\\
 
