--- a/awesome-latex-cv/section_headline.tex
+++ b/awesome-latex-cv/section_headline.tex
@@ -9,11 +9,16 @@
 \par{
 {\textbf{Bio.}}
 
-I am an MTech+PhD candidate at the Indian Institute of Technology, Bombay,
-India, working under the supervision of Prof Prabhu Ramachandran. My work
-broadly is a study of partial differential equations through mesh-free methods.
+I am currently employed as a Postdoctoral Researcher at the University of Surrey
+in Guildford, United Kingdom. My research primarily revolves around the
+investigation of particle dispersion and mixing within stirring tanks, employing
+computational techniques. Previously, I completed my PhD at the Indian Institute
+of Technology, Bombay, India, under the guidance of Prof. Prabhu
+Ramachandran. During my doctoral studies, my research interests were centered on
+the application of mesh-free methods to solve partial differential equations.
 
-{\textbf{Research interests.}} My Ph.D. research work covers a range of topics:
+
+{\textbf{Research interests.}} My research work covers a range of topics:
 \textbf{Meshless methods}: Smoothed particle hydrodynamics, Discrete element
 method, High-performance computing, Rigid-fluid coupling, Fluid-structure
-interaction, Elastic-plastic modeling.
+interaction, Elastic-plastic modeling, Particle dispersion, Cohesive materials.
