--- a/awesome-latex-cv/section_publications.tex
+++ b/awesome-latex-cv/section_publications.tex
@@ -12,12 +12,14 @@
 
 \begin{itemize}
 \item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``A corrected transport-velocity
-formulation for fluid and structural mechanics with SPH''. \emph{in: arXiv preprint
-arXiv:2106.00756 (2021)}, doi: \link{https://doi.org/10.48550/arXiv.2106.00756}{link}.
+  formulation for fluid and structural mechanics with SPH''.
+  \emph{Computational Particle Mechanics (2024): 425-445} doi:10.1007/s40571-023-00631-9 \link{https://doi.org/10.1007/s40571-023-00631-9}{link}.
+
 
 \item \textbf{Dinesh Adepu} and Prabhu Ramachandran. ``Improved collision
-  handling of elastic solids in SPH using a contact force model''. \emph{in:
-    Engineering Archive preprint (Aug. 2022),}, doi: \link{https://doi.org/10.31224/2503}{link}.
+  handling of elastic solids in SPH using a contact force model''.
+  \emph{Computational Particle Mechanics (2023): 1-19} doi:10.1007/s40571-023-00638-2 \link{https://doi.org/10.1007/s40571-023-00638-2}{link}.
+
 
 \item Prabhu Ramachandran, Aditya Bhosale, Kunal Puri, Pawan Negi, Abhinav Muta,
   \textbf{Adepu Dinesh}, Dileep Menon, Rahul Govind, Suraj Sanka, Amal S.
