--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -18,10 +18,10 @@
     % \homepage{huajh7.com}
     \github{dineshadepu}
     % \weibo{huajh7}
-    \linkedin{dinesh-adepu-1ba33845} \\
-    \smartphone{(+91) 9963943672}
+    \linkedin{dinesh-adepu-2640992a1} \\
+    \smartphone{(+44) 7762232805}
     \email{adepu.dinesh.a@gmail.com}\\
-    \address{A 713, Hostel 13, IIT Bombay, Powai, Bombay, India}\\
+    \address{11-29-106, 2nd Bank Colony, Warangal, India}\\
     \infos{August 1994, Warangal, Telangana, India}
 }
 
@@ -30,12 +30,14 @@
     \makecvheader
 
     \input{section_headline}
+    \input{section_experiences}				% Section experiences
+    \\
     \input{section_education}				% Section education
+    \\
     \input{section_publications}			% Section Publications
     \input{section_skills}					% Section Skill
-    % \input{section_experiences}				% Section experiences
     \input{section_experience_short}		% Section experiences
-    \input{section_course_work}					% Section coursework
+    % \input{section_course_work}					% Section coursework
     \input{section_languages}               % Section languages
     % \input{section_awards}					% Section Awards
     \input{section_interests}				% Section Interests
