--- a/awesome-latex-cv/fontawesome.sty
+++ b/awesome-latex-cv/fontawesome.sty
@@ -42,7 +42,7 @@
 \usepackage{fontspec}
 
 % definition of \FA as a shortcut to load the Font Awesome font
-\newfontfamily{\FA}{FontAwesome}
+\setfontfamily{\FA}{FontAwesome}
 
 % icon-specific commands
 \input{fontawesomesymbols-xeluatex.tex}
