--- a/awesome-latex-cv/section_experiences.tex
+++ b/awesome-latex-cv/section_experiences.tex
@@ -11,15 +11,9 @@
 \sectionTitle{Projects \& Experiences}{\faListUl}
 
 
-\begin{longtable}{R{2.5cm}|p{14.8cm}}
 
- 	\textsc{April 2011} & title, \textsc{company}, China\\
- 	\textsc{March 2011}& title, Department\\&
- 	\footnotesize{detail.}\\&
- 	\footnotesize{\emph{keyword:} Eclipse  Android  }\\
- \multicolumn{2}{c}{}\\
- 
- 	\textsc{October 2004} & Design, \textsc{Apple}, USA\\
- 	\textsc{Aguest 2004}&\footnotesize{ Design apple 4. }\\&
- 	\footnotesize{\emph{Technologies:} Art.}\\
-\end{longtable}
+\begin{tabular}{rl}
+    \textsc{April 2023 --}            & PostDoctoral candidate in School of Chemistry and Chemical Engineering,\\
+                                     &  \emph{University of Surrey, United Kingdom}  \\
+                                    % &  \emph{Advisor: Prof. Chuan-Yu Wu}\\
+\end{tabular}
