--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -12,7 +12,7 @@
 
 \name{Dinesh}{Adepu}
 
-\tagline{PhD scholar}
+\tagline{Research Fellow}
 \photo{2.5cm}{avatar1}
 \socialinfo{
     % \homepage{huajh7.com}
@@ -21,7 +21,7 @@
     \linkedin{dinesh-adepu-2640992a1} \\
     \smartphone{(+44) 7762232805}
     \email{adepu.dinesh.a@gmail.com}\\
-    \address{11-29-106, 2nd Bank Colony, Warangal, India}\\
+    \address{Manor Park, Guildford, United Kingdom}\\
     \infos{August 1994, Warangal, Telangana, India}
 }
 
@@ -44,5 +44,5 @@
     % \input{section_references}                 % Section References
 
     \noindent \\
-    (last update: 24 Oct. 2022)
+    (last update: 20 July. 2024)
 \end{document}
