--- a/awesome-latex-cv/section_experiences.tex
+++ b/awesome-latex-cv/section_experiences.tex
@@ -13,7 +13,7 @@
 
 
 \begin{tabular}{rl}
-    \textsc{April 2023 -- August 2024}            & PostDoctoral candidate in School of Chemistry and Chemical Engineering,\\
+    \textsc{April 2023 -- August 2024}            & EPSRC PostDoctoral candidate in School of Chemistry and Chemical Engineering,\\
                                      &  \emph{University of Surrey, United Kingdom}  \\
-                                    % &  \emph{Advisor: Prof. Chuan-Yu Wu}\\
+                                    &  \emph{Advisor: \link{https://www.surrey.ac.uk/people/charley-wu}{Prof. Chuan-Yu Wu}}\\
 \end{tabular}
