--- a/awesome-latex-cv/section_headline.tex
+++ b/awesome-latex-cv/section_headline.tex
@@ -9,16 +9,19 @@
 \par{
 {\textbf{Bio.}}
 
-I am currently employed as a Postdoctoral Researcher at the University of Surrey
-in Guildford, United Kingdom. My research primarily revolves around the
-investigation of particle dispersion and mixing within stirring tanks, employing
-computational techniques. Previously, I completed my PhD at the Indian Institute
-of Technology, Bombay, India, under the guidance of Prof. Prabhu
-Ramachandran. During my doctoral studies, my research interests were centered on
-the application of mesh-free methods to solve partial differential equations.
+I completed my PhD at the Indian Institute of Technology, Bombay, India, under
+the guidance of Prof. Prabhu Ramachandran. During my doctoral studies, my
+research interests were centered on the application of mesh-free methods to
+solve partial differential equations. After my doctoral studies, I worked as an
+EPSRC Postdoctoral researcher at the University of Surrey in Guildford, United
+Kingdom with Prof. Chuan-Yu Wu. My research at University of Surrey primarily
+revolved around the investigation of particle dispersion and mixing within
+stirring tanks, employing computational techniques. Where, particle dispersion,
+swelling and agglomeration was studied.
 
 
 {\textbf{Research interests.}} My research work covers a range of topics:
 \textbf{Meshless methods}: Smoothed particle hydrodynamics, Discrete element
-method, High-performance computing, Rigid-fluid coupling, Fluid-structure
-interaction, Elastic-plastic modeling, Particle dispersion, Cohesive materials.
+method, High-performance computing, ExaScale computing, Rigid-fluid coupling,
+Fluid-structure interaction, Elastic-plastic modeling, Particle dispersion,
+Cohesive materials.
