--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -19,9 +19,9 @@
     \github{dineshadepu}
     % \weibo{huajh7}
     \linkedin{dinesh-adepu-2640992a1} \\
-    \smartphone{(+44) 7762232805}
+    \smartphone{(+91) 9963943672}
     \email{adepu.dinesh.a@gmail.com}\\
-    \address{Manor Park, Guildford, United Kingdom}\\
+    \address{11-29-106, 2nd Bank Colony, Warangal, India}\\
     \infos{August 1994, Warangal, Telangana, India}
 }
 
@@ -35,8 +35,8 @@
     \input{section_education}				% Section education
     \\
     \input{section_publications}			% Section Publications
-    \input{section_skills}					% Section Skill
     \input{section_experience_short}		% Section experiences
+    \input{section_skills}					% Section Skill
     % \input{section_course_work}					% Section coursework
     \input{section_languages}               % Section languages
     % \input{section_awards}					% Section Awards
