--- a/awesome-latex-cv/section_skills.tex
+++ b/awesome-latex-cv/section_skills.tex
@@ -18,7 +18,7 @@
                                      fluid-structure interaction,
                                      Elastic-plastic modeling.\\
 
-      \textsc{Programming Skills:}    &  Python, Rust, C/C++, Lisp, \LaTeX, Git.\\
+      \textsc{Programming Skills:}    &  C/C++, Python, Rust, Lisp, \LaTeX, Git.\\
 
       \textsc{Programming Skills C++:}  &  CMake\\
 
