--- a/awesome-latex-cv/awesome-source-cv.cls
+++ b/awesome-latex-cv/awesome-source-cv.cls
@@ -116,8 +116,8 @@
 %                Configuration for fonts
 %-------------------------------------------------------------------------------
 % Set the FontAwesome font to be up-to-date.
-% \setfontfamily\FA[Path=fonts/]{FontAwesome}
-\newfontfamily\FA[Path=fonts/]{FontAwesome}
+\setfontfamily\FA[Path=fonts/]{FontAwesome}
+% \newfontfamily\FA[Path=fonts/]{FontAwesome}
 
 
 % Define font to use according to localFont option
