--- a/awesome-latex-cv/fontawesome.sty
+++ b/awesome-latex-cv/fontawesome.sty
@@ -42,8 +42,8 @@
 \usepackage{fontspec}
 
 % definition of \FA as a shortcut to load the Font Awesome font
-% \setfontfamily{\FA}{FontAwesome}
-\newfontfamily{\FA}{FontAwesome}
+\setfontfamily{\FA}{FontAwesome}
+% \newfontfamily{\FA}{FontAwesome}
 
 % icon-specific commands
 \input{fontawesomesymbols-xeluatex.tex}
