--- a/awesome-latex-cv/section_experience_short.tex
+++ b/awesome-latex-cv/section_experience_short.tex
@@ -23,6 +23,20 @@
   }
   {N-body, Cabana, Kokkos, C++, HPC, DEM, Heterogeneous computing}
 
+  \emptySeparator
+  \experience
+  {} {A rigid body solver in Cabana (An exascale capable heterogenous computing particle library)}{}{}
+  {}    {
+    \begin{itemize}
+    \item Implemented the 3D-rigid body dynamics sovler within the Cabana
+      particle library, designed to operate efficiently on both GPU and CPU
+      architectures, supporting serial and parallel computations.
+      \faGithub: \link{https://github.com/ExaPhysics/CabanaRigidBody}{https://github.com/ExaPhysics/CabanaRigidBody},
+    \end{itemize}
+  }
+  {N-body, HPC, DEM, SPH}
+
+  \emptySeparator
   \experience
   {} {An SPH-DEM solver in PySPH}{}{}
   {}    {
@@ -100,4 +114,14 @@
     \end{itemize}
   }
   {N-body, Rust, High performance computing, Entity-component-system (ECS), Discrete element method}
+
+  \emptySeparator
+  \experience
+  {} {Dendrite formation in FEniCSx}{}{}
+  {}    {
+    \begin{itemize}
+    \item Numerical Dendrite growth in Li-ion batterismodeling
+    \end{itemize}
+  }
+  {FEM, dendrite, FEniCSx}
 \end{experiences}
