--- a/awesome-latex-cv/section_experiences.tex
+++ b/awesome-latex-cv/section_experiences.tex
@@ -13,6 +13,9 @@
 
 
 \begin{tabular}{rl}
+    \textsc{October 2024 -- }            & PostDoctoral candidate in Mechanical Engineering,\\
+                                     &  \emph{Indian Institute of Technology, Delhi, India}  \\
+                                    &  \emph{Advisor: \link{https://web.iitd.ac.in/~agupta/}{Prof. Amit Gupta}}\\
     \textsc{April 2023 -- August 2024}            & EPSRC PostDoctoral candidate in School of Chemistry and Chemical Engineering,\\
                                      &  \emph{University of Surrey, United Kingdom}  \\
                                     &  \emph{Advisor: \link{https://www.surrey.ac.uk/people/charley-wu}{Prof. Chuan-Yu Wu}}\\
