--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -18,11 +18,11 @@
     % \homepage{huajh7.com}
     \github{dineshadepu}
     % \weibo{huajh7}
-    \linkedin{dinesh-adepu-2640992a1} \\
+    \linkedin{dinesh-adepu-3333a736a} \\
     \smartphone{(+91) 9963943672}
     \email{adepu.dinesh.a@gmail.com}\\
-    \address{11-29-106, 2nd Bank Colony, Warangal, India}\\
-    \infos{August 1994, Warangal, Telangana, India}
+    % \address{11-29-106, 2nd Bank Colony, Warangal, India}\\
+    % \infos{August 1994, Warangal, Telangana, India}
 }
 
 \begin{document}
