--- a/awesome-latex-cv/awesome-cv.tex
+++ b/awesome-latex-cv/awesome-cv.tex
@@ -15,11 +15,11 @@
 \tagline{Research Fellow}
 \photo{2.5cm}{avatar1}
 \socialinfo{
-    % \homepage{huajh7.com}
+    \homepage{https://dineshadepu.github.io/}
     \github{dineshadepu}
     % \weibo{huajh7}
     \linkedin{dinesh-adepu-3333a736a} \\
-    \smartphone{(+91) 9963943672}
+    % \smartphone{(+91) 9963943672}
     \email{adepu.dinesh.a@gmail.com}\\
     % \address{11-29-106, 2nd Bank Colony, Warangal, India}\\
     % \infos{August 1994, Warangal, Telangana, India}
@@ -44,5 +44,5 @@
     % \input{section_references}                 % Section References
 
     \noindent \\
-    (last update: 08 April. 2025)
+    (last update: 17 June. 2025)
 \end{document}
